fixed title alignment and made nav responsive

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,6 @@ h2 {
     font-size: 1.8rem;
     font-weight: 800;
     text-transform: lowercase;
-    text-align: right;
     letter-spacing: -0.1rem;
 }
 h3 {
@@ -38,6 +37,7 @@ h3 {
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: -0.05rem;
+    margin-bottom: 0.5rem;
 }
 h4 {
     font-size: 1.5rem;
@@ -99,13 +99,14 @@ nav a:hover, nav a:focus {
 .title-heading {
     display: flex;
     flex-direction: column;
-    align-items: right;
     justify-content: center;
     height: 24rem;
     padding: 1rem;
+    width: 100%;
+    align-items: center;
 }
 .title-heading p {
-    text-align: right;
+    text-align: center;
 }
 
 .about-card {
@@ -147,6 +148,7 @@ nav a:hover, nav a:focus {
 @media (width > 30rem) { /* 480px */
     h2 {
         font-size: 2.8rem;
+        letter-spacing: -0.2rem;
     }
     h3 {
         font-size: 1.7rem;
@@ -179,10 +181,6 @@ nav a:hover, nav a:focus {
     h2 {
         font-size: 3.4rem;
     }
-    .title-heading {
-        width: 100%;
-        align-items: end;
-    }
     .title-heading p {
         max-width: 33rem;
     }
@@ -192,6 +190,15 @@ nav a:hover, nav a:focus {
     h2 {
         font-size: 2.4rem;
     }
+
+    nav {
+        width: 50%
+    }
+    nav a {
+        flex: 1;
+        text-align: center;
+    }
+
     #about {
         flex-direction: row;
         border-bottom: #D9D9D9 0.01rem solid;
@@ -237,6 +244,10 @@ nav a:hover, nav a:focus {
 @media (width > 90rem) { /* 1440px */
     h2 {
         font-size: 4rem;
+    }
+    p {
+        font-size: 1.1rem;
+        line-height: 1.1rem;
     }
     .about-info {
         padding: 2.5rem;
