--- a/css/project_card.css
+++ b/css/project_card.css
@@ -131,7 +131,25 @@
 }
 
 @media (width > 90rem) { /* 1440px */
-    
+    #work {
+        margin: 2rem;
+    }
+    h4 {
+        font-size: 2.4rem;
+    }
+    .card-title p {
+        font-size: 1.2rem;
+    }
+    .card-description p {
+        font-size: 1.3rem;
+        line-height: 1.3rem;
+    }
+    .card-title {
+        padding: 1.5rem;
+    }
+    .card-description {
+        padding: 1.5rem;
+    }
 }
 
 @media (width > 120rem) { /* 1920px */
